[flake8]
exclude = build,docs,.tox,.venv
ignore = E731
max-line-length = 100

[isort]
default_section = THIRDPARTY
known_first_party = neojsonrpc
line_length=100
lines_after_imports = 2
not_skip = __init__.py

[metadata]
license-file = LICENSE

[tool:pytest]
django_find_project = false
norecursedirs = build .tox
confcutdir = ./tests/
python_paths = ./

[wheel]
universal = 1
